--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div style="background: rgba(218,218,218,0);margin-top: 50px;">
         <h1 style="text-align: center;font-family: Quicksand, sans-serif;color: rgb(255,255,255);">About</h1>
-        <p style="text-align: center;font-family: Quicksand, sans-serif;color: rgb(255,255,255);">This website is a sole proof-of-concept showing just how flawed GoGuardian is. It's literally the most incompetent piece of paid software I may have ever seen.<br>Not only can it be bypassed using a few lines of code, but it can also be outright stopped from sending data to the teachers to track what you're doing, by using AdGuard DNS (94.140.14.14).<br>This is a POC showing how flawed GoGuardian is for the price, and how other, much less expensive, if not, free, options are much better.</p>
+        <p style="text-align: center;font-family: Quicksand, sans-serif;color: rgb(255,255,255);">This website is a sole proof-of-concept showing just how flawed GoGuardian is. It's literally the most incompetent piece of paid software I may have ever seen.<br>Not only can it be bypassed using a few lines of code, but it can also be outright stopped from sending data to the teachers to track what you're doing, by using AdGuard DNS (94.140.14.14).<br>This is a POC showing how flawed GoGuardian is for the price, and how other, much less expensive, if not, free, options are much better.<br><br><a href="https://github.com/Winterfoxxy-0/GoGuardian-Bypass" style="text-align: center;">GitHub</a></p>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/tsparticles@1.34.0/tsparticles.min.js"></script>
