--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </iframe>
     <div style="text-align: center;">
         <h1 style="margin-top: 75px;font-family: Quicksand, sans-serif;color: rgb(255,255,255);">GoGuardian Bypasser</h1>
-        <p style="font-family: Quicksand, sans-serif;color: rgb(255,255,255);">goguardian more like noguardian amirite</p><input type="text" id="urlInput" style="border-radius: 10px;border-width: 2.5px;border-style: solid;">
+        <p style="font-family: Quicksand, sans-serif;color: rgb(255,255,255);">goguardian more like noguardian amirite</p><input type="text" id="urlInput" style="border-radius: 10px;border-width: 2.5px;border-style: solid;" value="http://">
+
     </div>
     <div id="buttonDiv" style="text-align: center;margin-top: 10px;"><button class="btn btn-secondary" id="submit" type="button" style="text-align: center;">Go!</button></div>
     <div id="check" style="text-align: center;margin-top: 20px;"><input type="checkbox" id="compatibilityBox">
